samples/_failures_safe/1761317479_a54f9f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9fdf9533.c: In function ‘main’:
./samples/SAFE/__tmp_9fdf9533.c:158:28: error: expected ‘)’ at end of input
  158 |     if (transpose_matrix(&b
      |                         ~  ^
      |                            )
./samples/SAFE/__tmp_9fdf9533.c:158:9: error: too few arguments to function ‘transpose_matrix’
  158 |     if (transpose_matrix(&b
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9fdf9533.c:110:5: note: declared here
  110 | int transpose_matrix(const Matrix* src, Matrix* dst) {
      |     ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9fdf9533.c:158:5: error: expected declaration or statement at end of input
  158 |     if (transpose_matrix(&b
      |     ^~
